--- a/README.rdoc
+++ b/README.rdoc
@@ -1,21 +1,28 @@
 == README
 
-Education_onlineTest Step1: Please clone this code.
+This README would normally document whatever steps are necessary to get the
+application up and running.
 
-Step2: then add a teacher email address in (db/seed.rb) which will receive the teacher confirmation mail and user name to login.
+Things you may want to cover:
 
-Step3: Then add a gmail address in config/environments/development.rb (as showned lines) ActionMailer::Base.smtp_settings = { :address => "smtp.gmail.com", :port => 587, :domain => "mail.gmail.com", :user_name => "XXXX@gmail.com", :password => "XX", :authentication => "plain", :enable_starttls_auto => true }
+* Ruby version
 
-Step 4: Update the database.yml file with your mysql user name and password.
+* System dependencies
 
-if you are using pgsql then comment the current active code then uncomment pg code and update with your password.
+* Configuration
 
-Step5:
+* Database creation
 
-Make application folder as current folder and then enter the follwoing commands on terminal
+* Database initialization
 
-bundle install(it take some time to update the gems) rake db:create (it creates the database) rake db:migrate (migrates the dbsechema) rake db:seed (seeds teacher into users table)
+* How to run the test suite
 
-Finally start rails server.
+* Services (job queues, cache servers, search engines, etc.)
+
+* Deployment instructions
+
+* ...
 
 
+Please feel free to use a different markup language if you do not plan to run
+<tt>rake doc:app</tt>.
